# BoomAirDrop

./: .gitignore  alembic.ini  main.py  pyproject.toml  requirements.txt
backend/: config.py  constants.py
backend/application/: deps.py
backend/application/authorization/: tg_miniapp_init_authorization.py
backend/application/mapper/: user_schema_mapper.py  video_schema_mapper.py
backend/application/routers/: base.py  game.py  photos.py  referals.py  users.py  videos.py
backend/application/schema/: photo.py  referal.py  user.py  video.py
backend/domain/game/: entity.py  repository.py  service.py
backend/domain/photo/: entity.py  port.py  repository.py  service.py
backend/domain/referalship/: entity.py  repository.py  service.py
backend/domain/seedwork/: entity.py  repository.py
backend/domain/user/: entity.py  port.py  repository.py  service.py
backend/domain/video/: entitry.py  port.py  repository.py  service.py
backend/infrastructure/game/: mapper.py  model.py  repository.py
backend/infrastructure/photo/: model.py  (+5 more)
cron/: create_videos.py
migration/: env.py
migration/versions/: 1db99efee1cb_add_game_status.py  227a355b8874_video_model_fk.py  315348e90206_switch_to_bigint.py  3f3ce979488a_add_geme_status.py  527bf0653c43_added_new_user_info.py  64e8478a22cd_add_tables.py  702696cd6dc8_initial.py  c59cfc849958_store_profile_photos_locally.py  d07ad8f99041_referalship_model.py  ef2feff17434_user_balance_to_big_integer.py  f3aa37c1bc9a_video_model.py
resources/: logo.apng
tests/domain/: dummies.py  test_photo_service.py  test_user_service.py
(+19 files in other folders)
